base-app/ingress-nginx-config/argocd/argocd-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-hc.datxasia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
